# portfolio_models

./: .gitignore  LICENSE  README.md  explore.ipynb  pyproject.toml  test_doodle_model.py  test_sentiment_model.py
doodle/: quickdraw_to_png.py  split_png_dataset.py  train_cnn.py
sentiment/: prep_imdb_data.py  train_lstm_sentiment.py  train_tinybert.py
utils/: convert_to_tfjs.py
