[project]
name = "portfolio-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers[torch]>=4.53.0",
]
